--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SaaSMarketry Lite</title>
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="y731lSntLGxIQCRJPcPX5Q" async></script>  <!-- ahrefs tracker -->
+    <title>SaaSMarketry</title>
   </head>
   <body>
     <div id="root"></div>
