--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="y731lSntLGxIQCRJPcPX5Q" async></script>  <!-- ahrefs verifier -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="y731lSntLGxIQCRJPcPX5Q" async></script>  <!-- ahrefs tracker -->
     <title>SaaSMarketry</title>
   </head>
